--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-learner" class="anchor" href="#welcome-to-learner" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Learner!</h3>
+      <h1>
+<a id="welcome-to-learner" class="anchor" href="#welcome-to-learner" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Learner!</h1>
 
-<p>Learner is Super-Easy Machine Learning Library to apply your own Object Detection or Recognition project using your image data.</p>
+<p>Learner is Super-Easy Machine Learning Library to apply your own Object Detection or Recognition project using your own image data.</p>
 
 <ul>
 <li>Learner supports two Machine Learning technique; Support Vector Machine(SVM) and Multi-Layer Perceptron(MLP).</li>
 <li>Learner can extract Histogram of Oriented Gradients from your image data to generate a feature.</li>
 </ul>
 
-<h1>
-<a id="environment-dependencies" class="anchor" href="#environment-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Environment, Dependencies</h1>
+<h2>
+<a id="environment-dependencies" class="anchor" href="#environment-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Environment, Dependencies</h2>
 
 <ul>
 <li>Leaner support every OS; Windows, Linux, OSX.</li>
@@ -39,8 +39,8 @@
 <li>OpenCV (Computer Vision Library)</li>
 </ul>
 
-<h1>
-<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h1>
+<h2>
+<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
 
 <ul>
 <li>Author: Sung-ju Kim</li>
