Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="welcome-to-learner" class="anchor" href="#welcome-to-learner" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Learner!</h1>
 
-<p>Learner is Super-Easy Machine Learning Library to apply your own Object Detection or Recognition project using your own image data.</p>
+<p>Learner is Super-Easy Machine Learning Library to apply your own Object Detection or Recognition project using your image data.</p>
 
 <ul>
 <li>Learner supports two Machine Learning technique; Support Vector Machine(SVM) and Multi-Layer Perceptron(MLP).</li>
@@ -33,10 +33,25 @@
 <a id="environment-dependencies" class="anchor" href="#environment-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Environment, Dependencies</h2>
 
 <ul>
-<li>Leaner support every OS; Windows, Linux, OSX.</li>
-<li>C++ (Learner supports only C++ now.)</li>
-<li>Qt (It use Qt Library for OS independency.)</li>
-<li>OpenCV (Computer Vision Library)</li>
+<li>Leaner supports every OS; Windows, Linux, OSX.</li>
+<li>C++<br>
+
+<ul>
+<li>Learner supports only C++ now.</li>
+</ul>
+</li>
+<li>Qt<br>
+
+<ul>
+<li>Learner uses Qt Library for OS independency.</li>
+</ul>
+</li>
+<li>OpenCV<br>
+
+<ul>
+<li>Computer Vision Library</li>
+</ul>
+</li>
 </ul>
 
 <h2>
@@ -49,6 +64,13 @@
 <li>github: <a href="https://github.com/goddoe">https://github.com/goddoe</a>
 </li>
 </ul>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<blockquote>
+<p>MIT License</p>
+</blockquote>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/goddoe/Learner">Learner</a> is maintained by <a href="https://github.com/goddoe">goddoe</a>.</span>
